レベル間でライフとコインを保持する

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 EditorStartupMap=/Game/RollingBall/Maps/Test/TestField.TestField
 GlobalDefaultGameMode=/Script/RollingBall.InGameGameMode
+GameInstanceClass=/Script/RollingBall.RollingBallGameInstance
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
