--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/RollingBall/Maps/Test/MainMenu/MainMenu.MainMenu
 EditorStartupMap=/Game/RollingBall/Maps/Test/TestField.TestField
 GlobalDefaultGameMode=/Script/RollingBall.InGameGameMode
 GameInstanceClass=/Script/RollingBall.RollingBallGameInstance
